fixed the width of the tabs (490 is too small apparently) changed the icon in the help.html

--- a/css/mainwindow.css
+++ b/css/mainwindow.css
@@ -617,7 +617,7 @@
 	position: absolute;
 	top:      9px;
 	left:     9px;
-	width:  490px;
+	width:  492px;
 	height: 288px;
 }
 #setup_tabList{
